--- a/Project1.ipynb
+++ b/Project1.ipynb
@@ -55,18 +55,18 @@
       "metadata": {
         "id": "PJr9TXSXBzPf"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "ejQ3bTJ769gG",
-        "outputId": "0d30bf68-5483-47fd-bd40-02377ab26042"
+        "outputId": "6a0e6e4e-530a-435c-fc0c-ffed74ceb6c0"
       },
       "outputs": [
         {
@@ -74,29 +74,129 @@
           "name": "stdout",
           "text": [
             "\n",
-            "-----Basic Log Analyzer-----\n",
+            "----- BASIC LOG ANALYZER -----\n",
             "1. Add new log entry\n",
             "2. Show all logs\n",
+            "3. Categorize events\n",
+            "4. Count error types\n",
+            "5. Analyze user activity\n",
+            "6. Filter logs by severity\n",
+            "7. Filter logs by time\n",
+            "8. Exit\n",
             "Enter choice: 1\n",
-            "Enter time(HH:MM): 10:11\n",
-            "Enter severity(INFO/WARNING/ERROR): ERROR\n",
-            "Enter username: Johny\n",
-            "Enter message: Login failed\n",
+            "Enter time (HH:MM): 12:05\n",
+            "Enter severity (INFO/WARNING/ERROR): ERROR\n",
+            "Enter username: Adarsh\n",
+            "Enter message: Login error\n",
             "Log added successfully\n",
             "\n",
-            "-----Basic Log Analyzer-----\n",
+            "----- BASIC LOG ANALYZER -----\n",
             "1. Add new log entry\n",
             "2. Show all logs\n",
+            "3. Categorize events\n",
+            "4. Count error types\n",
+            "5. Analyze user activity\n",
+            "6. Filter logs by severity\n",
+            "7. Filter logs by time\n",
+            "8. Exit\n",
             "Enter choice: 2\n",
-            "-----Logs-----\n",
+            "\n",
+            "----- Logs -----\n",
             "10:15 | ERROR | Aadhil | Failed login\n",
             "10:16 | INFO | Niranj | File uploaded\n",
             "10:17 | WARNING | Irfana | Disk full\n",
-            "10:11|ERROR|Johny|Login failed\n",
+            "12:05 | ERROR | Adarsh | Login error\n",
             "\n",
-            "-----Basic Log Analyzer-----\n",
+            "----- BASIC LOG ANALYZER -----\n",
             "1. Add new log entry\n",
-            "2. Show all logs\n"
+            "2. Show all logs\n",
+            "3. Categorize events\n",
+            "4. Count error types\n",
+            "5. Analyze user activity\n",
+            "6. Filter logs by severity\n",
+            "7. Filter logs by time\n",
+            "8. Exit\n",
+            "Enter choice: 3\n",
+            "\n",
+            "Event Categories:\n",
+            "ERROR : 2\n",
+            "INFO : 1\n",
+            "WARNING : 1\n",
+            "\n",
+            "----- BASIC LOG ANALYZER -----\n",
+            "1. Add new log entry\n",
+            "2. Show all logs\n",
+            "3. Categorize events\n",
+            "4. Count error types\n",
+            "5. Analyze user activity\n",
+            "6. Filter logs by severity\n",
+            "7. Filter logs by time\n",
+            "8. Exit\n",
+            "Enter choice: 4\n",
+            "\n",
+            "Error Types:\n",
+            "Failed login : 1\n",
+            "Login error : 1\n",
+            "\n",
+            "----- BASIC LOG ANALYZER -----\n",
+            "1. Add new log entry\n",
+            "2. Show all logs\n",
+            "3. Categorize events\n",
+            "4. Count error types\n",
+            "5. Analyze user activity\n",
+            "6. Filter logs by severity\n",
+            "7. Filter logs by time\n",
+            "8. Exit\n",
+            "Enter choice: 5\n",
+            "\n",
+            "User Activity:\n",
+            "Aadhil : 1\n",
+            "Niranj : 1\n",
+            "Irfana : 1\n",
+            "Adarsh : 1\n",
+            "\n",
+            "----- BASIC LOG ANALYZER -----\n",
+            "1. Add new log entry\n",
+            "2. Show all logs\n",
+            "3. Categorize events\n",
+            "4. Count error types\n",
+            "5. Analyze user activity\n",
+            "6. Filter logs by severity\n",
+            "7. Filter logs by time\n",
+            "8. Exit\n",
+            "Enter choice: 6\n",
+            "Enter severity (INFO/WARNING/ERROR): ERROR\n",
+            "\n",
+            "Filtered Logs:\n",
+            "10:15 | ERROR | Aadhil | Failed login\n",
+            "12:05 | ERROR | Adarsh | Login error\n",
+            "\n",
+            "----- BASIC LOG ANALYZER -----\n",
+            "1. Add new log entry\n",
+            "2. Show all logs\n",
+            "3. Categorize events\n",
+            "4. Count error types\n",
+            "5. Analyze user activity\n",
+            "6. Filter logs by severity\n",
+            "7. Filter logs by time\n",
+            "8. Exit\n",
+            "Enter choice: 7\n",
+            "Enter time (HH:MM): 12:05\n",
+            "\n",
+            "Filtered Logs:\n",
+            "12:05 | ERROR | Adarsh | Login error\n",
+            "\n",
+            "----- BASIC LOG ANALYZER -----\n",
+            "1. Add new log entry\n",
+            "2. Show all logs\n",
+            "3. Categorize events\n",
+            "4. Count error types\n",
+            "5. Analyze user activity\n",
+            "6. Filter logs by severity\n",
+            "7. Filter logs by time\n",
+            "8. Exit\n",
+            "Enter choice: 8\n",
+            "Program Ended\n"
           ]
         }
       ],
