--- a/Project2.ipynb
+++ b/Project2.ipynb
@@ -43,13 +43,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "HANm7sHdGgQQ",
-        "outputId": "43b4ac6b-ad1a-41d7-c800-8f15341ff888"
+        "outputId": "d0e7f5ad-5f4b-46f9-9da2-33b2aba3aea5"
       },
       "outputs": [
         {
@@ -66,7 +66,7 @@
             "6. Exit\n",
             "Enter choice: 1\n",
             "Enter course name: AI\n",
-            "Enter credits: 5\n",
+            "Enter credits: 4\n",
             "Enter seat limit: 50\n",
             "Course added successfully\n",
             "\n",
@@ -78,7 +78,7 @@
             "5. Course summary report\n",
             "6. Exit\n",
             "Enter choice: 2\n",
-            "Enter student name: aadhil\n",
+            "Enter student name: Adarsh\n",
             "Student registered successfully\n",
             "\n",
             "--- COURSE REGISTRATION SYSTEM ---\n",
@@ -89,7 +89,7 @@
             "5. Course summary report\n",
             "6. Exit\n",
             "Enter choice: 3\n",
-            "Enter student name: aadhil\n",
+            "Enter student name: Adarsh\n",
             "Enter course name: AI\n",
             "Enrollment successful\n",
             "\n",
@@ -103,9 +103,9 @@
             "Enter choice: 4\n",
             "\n",
             "--- Student Summary ---\n",
-            "Name: aadhil\n",
+            "Name: Adarsh\n",
             "Courses: ['AI']\n",
-            "Total Credits: 5\n",
+            "Total Credits: 4\n",
             "\n",
             "\n",
             "--- COURSE REGISTRATION SYSTEM ---\n",
@@ -119,7 +119,7 @@
             "\n",
             "--- Course Summary ---\n",
             "Course: AI\n",
-            "Credits: 5\n",
+            "Credits: 4\n",
             "Seats: 50\n",
             "Enrolled: 1\n",
             "\n",
